fix(footer-block): space between footer-block--push-down and adjacent element too large

--- a/src/scss/atomic/molecules/_footer-block.scss
+++ b/src/scss/atomic/molecules/_footer-block.scss
@@ -8,6 +8,10 @@
     }
 
     &--push-down:not(:empty) {
-        margin-top: $buildingUnit * 5;
+        margin-top: $buildingUnit * 3;
+
+        @include min-tablet {
+            margin-top: $buildingUnit * 5;
+        }
     }
 }
